--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="rf">
                     <div class=Recherche>
-                        <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
+                        <div class="res1"><a href="#"><i class="fas fa-map-marker-alt"></i></a></div>
                         <div class="res2">Marseille, France</div>
-                        <div class="res3">Recherche</div>
+                        <div class="res3"><a href="#">Recherche</a></div>
                     </div></header> </br>
                     <div class="Filtre">
                         <div class="fil">Filtres</div>
@@ -58,10 +58,12 @@
                 <div class="bloc_img">
                     <div class="be2">
                         <div class="b2">
-                            <img src="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" />       
+                            <a href="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
+                                alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" title="Cliquez pour agrandir"/> </a>      
                         </div>
                         <div class="b22">
-                             <h1>Auberge la Cannablère</h1>
+                             <h1><strong><a href="#">Auberge la Cannablère</a></strong></h1>
                              <h2>nuit à partir de 25€</h2>
                              <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                              <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -72,10 +74,12 @@
                     </div>
                     <div class="be3">
                         <div class="b3">
-                            <img src="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" />       
+                            <a href="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
+                                alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" title="Cliquez pour agrandir"/> </a>      
                         </div>
                         <div class="b33">
-                            <h1>Hôtel du port</h1>
+                            <h1><strong><a href="#">Hôtel du port</a></strong></h1>
                             <h2>nuit à partir de 52€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -86,10 +90,12 @@
                     </div>
                     <div class="be4">
                         <div class="b4">
-                            <img src="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" />       
+                            <a href="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" title="Cliquez pour agrandir" /> </a>      
                         </div>
                         <div class="b44">
-                            <h1>Hôtel les Mouettes </h1>
+                            <h1><strong><a href="#">Hôtel les Mouettes</a></strong></h1>
                             <h2>nuit à partir de 76€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -100,10 +106,12 @@
                     </div> 
                     <div class="be5">
                         <div class="b5">
-                          <img src="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" />       
+                            <a href="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                 alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" title="Cliquez pour agrandir" /></a>       
                         </div>
                         <div class="b55">
-                          <h1>Hotel de la mer </h1>
+                          <h1><strong><a href="#">Hotel de la mer</a></strong></h1>
                           <h2>nuit à partir de 46€</h2>
                           <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                           <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -114,10 +122,12 @@
                     </div>
                     <div class="be6">
                         <div class="b6">
-                            <img src="Projet_2_Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt=" Photo nicate-lee-kT-ZyaiwBe0-unsplash" />       
+                            <a href="Projet_2_Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                 alt=" Photo nicate-lee-kT-ZyaiwBe0-unsplash" title="Cliquez pour agrandir"/></a>
                         </div>
                         <div class="b66">
-                            <h1>Auberge le Panier </h1>
+                            <h1><strong><a href="#">Auberge le Panier</a></strong></h1>
                             <h2>nuit à partir de 23€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -128,10 +138,12 @@
                     </div> 
                     <div class="be7">
                         <div class="b7">
-                            <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="  Photo febrian-zakaria-M6S1WvfW68A-unsplash" />       
+                            <a href="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                 alt="  Photo febrian-zakaria-M6S1WvfW68A-unsplash" title="Cliquez pour agrandir"/></a>      
                         </div>
                         <div class="b77">
-                            <h1>Hôtel chez Amina</h1>
+                            <h1><strong><a href="#">Hôtel chez Amina</a></strong></h1>
                             <h2>nuit à partir de 96€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -157,10 +169,12 @@
                 </div>
                 <div class="po2">
                     <div class="p2">
-                        <img src="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg" alt=" Photo Hebergement" />       
+                        <a href="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/hebergement.jpg"
+                             alt=" Photo Hebergement" title="Cliquez pour agrandir"/></a>       
                     </div>
                     <div class="p22">
-                        <h1>Hotel Le soleil du matin </h1>
+                        <h1><strong><a href="#">Hotel Le soleil du matin</a></strong></h1>
                         <h2>nuit à partir de 128€</h2>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -171,10 +185,12 @@
                 </div>
                 <div class="po3">
                     <div class="p3">
-                        <img src="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=" Photo aw-creative-VGs8z60yT2c-unsplash " />       
+                        <a href="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                             alt=" Photo aw-creative-VGs8z60yT2c-unsplash " title="Cliquez pour agrandir"/></a>
                     </div>
                     <div class="p33">
-                        <h1>Au coeur de l'eau Chambre d'hôtes </h1>
+                        <h1><strong><a href="#">Au coeur de l'eau Chambre d'hôtes</a></strong></h1> 
                         <h2>nuit à partir de 71€</h2>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -185,11 +201,13 @@
                 </div>
                 <div class="po4">
                     <div class="p4">
-                        <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" />       
+                        <a href="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                             alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" title="Cliquez pour agrandir" /></a>       
                     </div>
                     <div class="p44">
-                        <h1>Au coeur de l'eau Chambre d'hôtes </h1>
-                        <h2>nuit à partir de 71€</h2>
+                        <h1><strong><a href="#">Hôtel tout bleu et blanc</a></strong></h1>
+                        <h2>nuit à partir de 78€</h2>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -207,62 +225,90 @@
                 <div class="b_ele">
                     <div class="b_el1">
                         <div class="b_el11">
-                            <img src="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash" />       
+                            <a href="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                 alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash"title="Cliquez pour agrandir" /></a>    
                         </div>
                         <div class="b_el111">
-                            <h2>Vieux port</h2>
+                            <h2><a href="#">Vieux port</a></h2>
                         </div>
                     </div>
                     <div class="b_el2">
                         <div class="b_e2">
                             <div class="b_e22">
-                                <img src="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" />       
+                                <a href="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                                    <img src="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
+                                    alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" title="Cliquez pour agrandir" /></a>      
                             </div>
                             <div class="b_e222">
-                               <h2><strong> Fort de Pomègues</strong></h2>
+                               <h2><strong><a href="#">Fort de Pomègues</a></strong></h2>
                             </div>
                         </div>
                         <div class="b_2">
                             <div class="b_22">
-                                <img src="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash" />       
+                                <a href="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                                    <img src="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" 
+                                    alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash"  title="Cliquez pour agrandir"/></a>
                             </div>
                             <div class="b_222">
-                                <h2><strong>Îles du Frioul</strong></h2>
+                                <h2><strong><a href="#">Îles du Frioul</a></strong></h2>
                             </div>
                         </div>
                     </div>
                     <div class="b_el3">
                         <div class="b_el33">
-                            <img src="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" />       
+                            <a href="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                                <img src="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
+                                alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" title="Cliquez pour agrandir"/></a>       
                         </div>
                         <div class="b_el333">
-                            <h2><strong>Parc national des Calanques</strong></h2>
+                            <h2><strong><a href="#">Parc national des Calanques</a></strong></h2>
                         </div>
                     </div>
                     <div class="b_el4">
                         <div class="b_e4">
                             <div class="b_e44">
-                                <img src="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" />       
+                                <a href="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                                    <img src="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
+                                    alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" title="Cliquez pour agrandir"/></a> 
                             </div>
                             <div class="b_e444">
-                                <h2><strong>Notre-Dame-de-la-Garde</strong></h2>
+                                <h2><strong><a href="#">Notre-Dame-de-la-Garde</a></strong></h2>
                             </div>
                         </div>
                         <div class="b_4">
                             <div class="b_44">
-                                <img src="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash" />       
+                                <a href="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                                    <img src="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                    alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash"title="Cliquez pour agrandir" /></a>    
                             </div>
                             <div class="b_444">
-                                <h2><strong>Parc Longchamp</strong></h2>
+                                <h2><strong><a href="#">Parc Longchamp</a></strong></h2>
                             </div>
                         </div>
                     </div>
                 </div>
             </div> 
         </section>
-
         <footer>
-
+           <div class="bloc_f">
+                <div class="bf_1">
+                    <strong>A propos</strong><br/>
+                    <a href="#">Fonctonnement du site</a>
+                    <a href="#">Condition generale de vente</a>
+                    <a href="#">Données et confidentialité</a>
+                </div>
+                <div class="bf_2">
+                    <strong>Nos hébergements</strong><br/>
+                    <a href="#">Charte qualité</a>
+                    <a href="#">Soumettre votre hôtel</a>
+                </div>
+                <div class="bf_3">
+                    <strong>Assistance</strong><br/>
+                    <a href="#">Centre d'aide</a>
+                    <a href="#">Nous contacter</a>
+                </div>
+           </div> 
         </footer>
     </div>    
     
