--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="rf">
                     <div class=Recherche>
-                        <div class="res1"><a href="#"><i class="fas fa-map-marker-alt"></i></a></div>
+                        <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="res2">Marseille, France</div>
                         <div class="res3"><a href="#">Recherche</a></div>
                     </div></header> </br>
