--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -35,17 +35,49 @@
                         <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="res2">Marseille, France</div>
                         <div class="res3"><a href="#">Recherche</a></div>
-                    </div></header> </br>
+                    </div>
+                 </header> </br>
                     <div class="Filtre">
-                        <div class="fil">Filtres</div>
-                        <div class="ic1"><i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i></div><div class="eco">Economique</div>
-                        <div class="ic2"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div><div class="fam">Familial</div>
-                        <div class="ic3"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div><div class="rom">Romantique</div>
-                        <div class="ic4"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div><div class="ani">Animaux autorisés</div>
+                            <div class="fil_1">
+                                <div class="ic1">
+                                    <i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i>
+                                </div>
+                                <div class="eco">
+                                    Economique
+                                </div>
+                            </div>
+                            <div class="fil_2">
+                                <div class="ic2">
+                                    <i class="fas fa-child" style="color:blue; font-size:15px"></i>
+                                </div>
+                                <div class="fam">
+                                    Familial
+                                </div>
+                            </div>
+                            <div class="fil_3">
+                                <div class="ic3">
+                                    <i class="fas fa-heart"  style="color:blue; font-size:15px"></i>
+                                </div>
+                                <div class="rom">
+                                    Romantique
+                                </div>
+                            </div>
+                            <div class="fil_4">
+                                <div class="ic4">
+                                    <i class="fas fa-dog" style="color:blue; font-size:15px"></i>
+                                </div>
+                                <div class="ani">
+                                    Animaux autorisés
+                                </div>
+                            </div>
                     </div><br/>
                     <div class="ip">
-                        <div class="ic5"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
-                        <div class="ic55">plus de 500 logements sont disponibles dans cette ville</div>   
+                        <div class="ic5">
+                            <i class="fas fa-info" style="color:blue; font-size:10px"></i>
+                        </div>
+                        <div class="ic55">
+                            plus de 500 logements sont disponibles dans cette ville
+                        </div>   
                     </div>
                 </div>
             </div><br/>
