Mise à jour du 28_01_2021

--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -35,26 +35,30 @@
                         <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="res2">Marseille, France</div>
                         <div class="res3"><a href="#">Recherche</a></div>
-                    </div></header> </br>
-                    <div class="Filtre">
-                        <div class="fil">Filtres</div>
-                            <div class="fil_1">
-                                <div class="ic1"><i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i></div>
-                                <div class="eco">Economique</div>
+                    </div></header> 
+                    <div class="fil">
+                        <div class="fi1">
+                            <strong>Filtre</strong>
+                        </div>
+                        <div class="fi2">
+                            <div class="f1">
+                                <div class="f1_i"><i class="fas fa-money-bill-wave" style="color:blue; font-size:15px"></i></div>
+                                <div class="f1_ii"><strong>Economique</strong></div>
                             </div>
-                            <div class="fil_2">
-                                <div class="ic2"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div>
-                                <div class="fam">Familial</div>
+                            <div class="f2">
+                                <div class="f1_i"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div>
+                                <div class="f1_ii"><strong>Familial</strong></div>
                             </div>
-                            <div class="fil_3">
-                                <div class="ic3"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div>
-                                <div class="rom">Romantique</div>
+                            <div class="f3">
+                                <div class="f1_i"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div>
+                                <div class="f1_ii"><strong>Romantique</strong></div>
                             </div>
-                            <div class="fil_4">
-                                <div class="ic4"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div>
-                                <div class="ani">Animaux autorisés</div>
+                            <div class="f4">
+                                <div class="f1_i"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div>
+                                <div class="f1_ii"><strong>Animaux autorisés</strong></div>
                             </div>
-                    </div><br/>
+                        </div>
+                    </div>
                     <div class="ip">
                         <div class="ic5"><i class="fas fa-info" style="color:blue; font-size:10px"></i></div>
                         <div class="ic55">plus de 500 logements sont disponibles dans cette ville</div>   
