Mise à jour du 03_02_2021

--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -20,22 +20,22 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a href="#">Hébergement</a></li>
-                            <li><a href="#">Activités</a></li>
-                            <li><a href="#">S'inscrire</a></li>
+                            <li><a href="#"><strong>Hébergement</strong></a></li>
+                            <li><a href="#"><strong>Activités</strong></a></li>
+                            <li><a href="#"><strong>S'inscrire</strong></a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="par">
-                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h1><strong>Trouvez votre hébergement pour des vacances de rêve</strong></h1>
                     <h2>En plein centre ville ou en pleine nature</h2> 
                 </div>
                 <div class="rf">
-                    <div class=Recherche>
+                    <div class="Recherche">
                         <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
-                        <div class="res2">Marseille, France</div>
+                        <div class="res2"><strong>Marseille, France</strong></div>
                         <div class="res3"><a href="#">Recherche</a></div>
-                    </div></header> 
+                    </div> 
                     <div class="fil">
                         <div class="fi1">
                             <strong>Filtre</strong>
@@ -46,16 +46,16 @@
                                 <div class="f1_ii"><strong>Economique</strong></div>
                             </div>
                             <div class="f2">
-                                <div class="f1_i"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div>
-                                <div class="f1_ii"><strong>Familial</strong></div>
+                                <div class="f2_i"><i class="fas fa-child" style="color:blue; font-size:15px"></i></div>
+                                <div class="f2_ii"><strong>Familial</strong></div>
                             </div>
                             <div class="f3">
-                                <div class="f1_i"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div>
-                                <div class="f1_ii"><strong>Romantique</strong></div>
+                                <div class="f3_i"><i class="fas fa-heart"  style="color:blue; font-size:15px"></i></div>
+                                <div class="f3_ii"><strong>Romantique</strong></div>
                             </div>
                             <div class="f4">
-                                <div class="f1_i"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div>
-                                <div class="f1_ii"><strong>Animaux autorisés</strong></div>
+                                <div class="f4_i"><i class="fas fa-dog" style="color:blue; font-size:15px"></i></div>
+                                <div class="f4_ii"><strong>Animaux autorisés</strong></div>
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
             <div class="ber">
                 <div class="be1">
                     <strong>Heberegement à Marseille</strong>
-                </div>
+                </div><br/>
                 <div class="bloc_img">
                     <div class="be2">
                         <div class="b2">
@@ -155,7 +155,7 @@
                     <div class="be7">
                         <div class="b7">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                  alt="  Photo febrian-zakaria-M6S1WvfW68A-unsplash" title="Cliquez pour agrandir"/></a>      
                         </div>
                         <div class="b77">
@@ -234,7 +234,6 @@
             </div> 
         </section><br/>
         <section class="sec2">
-            <div class="b_sec2">
                 <div class="b_se1">
                    <strong>Activites à Marseille</strong>
                 </div><br/>
@@ -304,27 +303,24 @@
                         </div>
                     </div>
                 </div>
-            </div> 
-        </section>
+        </section><br/>
         <footer>
-           <div class="bloc_f">
-                <div class="bf_1">
-                    <strong>A propos</strong><br/>
-                    <a href="#">Fonctonnement du site</a>
-                    <a href="#">Condition generale de vente</a>
-                    <a href="#">Données et confidentialité</a>
-                </div>
-                <div class="bf_2">
-                    <strong>Nos hébergements</strong><br/>
-                    <a href="#">Charte qualité</a>
-                    <a href="#">Soumettre votre hôtel</a>
-                </div>
-                <div class="bf_3">
-                    <strong>Assistance</strong><br/>
-                    <a href="#">Centre d'aide</a>
-                    <a href="#">Nous contacter</a>
-                </div>
-           </div> 
+            <div class="bf_1">
+                <strong>A propos</strong><br/>
+                <a href="#">Fonctonnement du site</a>
+                <a href="#">Condition generale de vente</a>
+                <a href="#">Données et confidentialité</a>
+            </div>
+            <div class="bf_2">
+                <strong>Nos hébergements</strong><br/>
+                <a href="#">Charte qualité</a>
+                <a href="#">Soumettre votre hôtel</a>
+            </div>
+            <div class="bf_3">
+                <strong>Assistance</strong><br/>
+                <a href="#">Centre d'aide</a>
+                <a href="#">Nous contacter</a>
+            </div>
         </footer>
     </div>    
     
