--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -13,18 +13,15 @@
 <body>
     <div id="bloc_page"> 
         <header>
-            <div class=bloc_header>
                 <div class="titre_principal">
                     <div class="logo">
-                        <img src="Projet_2_Reservia/images/logo/Reservia@3x.png" alt="Logo Reservie" />       
+                        <img src="Projet_2_Reservia/images/logo/Reservia@3x.png" alt="Logo de Reservia@3x" />
                     </div>
                     <nav>
-                        <ul>
-                            <li><a href="#"><strong>Hébergement</strong></a></li>
-                            <li><a href="#"><strong>Activités</strong></a></li>
-                            <li><a href="#"><strong>S'inscrire</strong></a></li>
-                        </ul>
+                        <div class="header_nav_list"><a href="#"><strong>Hébergement</strong></a></div>
+                        <div class="header_nav_list"><a href="#"><strong>Activités</strong></a></div>
                     </nav>
+                    <div class="header_inscrire"><a href="#"><strong>S'inscrire</strong></a></div>
                 </div>
                 <div class="par">
                     <h1><strong>Trouvez votre hébergement pour des vacances de rêve</strong></h1>
@@ -34,7 +31,7 @@
                     <div class="Recherche">
                         <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="res2"><strong>Marseille, France</strong></div>
-                        <div class="res3"><a href="#">Recherche</a></div>
+                        <div class="res3"><a href="#">Recherche</a><i class="fas fa-search"></i></div>
                     </div> 
                     <div class="fil">
                         <div class="fi1">
@@ -64,8 +61,7 @@
                         <div class="ic55">plus de 500 logements sont disponibles dans cette ville</div>   
                     </div>
                 </div>
-            </div><br/>
-        </header>
+        </header><br/>
         <section class="sec1">
             <div class="ber">
                 <div class="be1">
@@ -75,8 +71,8 @@
                     <div class="be2">
                         <div class="b2">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
-                                alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" title="Cliquez pour agrandir"/> </a>      
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
+                            alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" title="Cliquez pour agrandir"/> </a>      
                         </div>
                         <div class="b22">
                              <h1><strong><a href="#">Auberge la Cannablère</a></strong></h1>
@@ -91,8 +87,8 @@
                     <div class="be3">
                         <div class="b3">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
-                                alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" title="Cliquez pour agrandir"/> </a>      
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
+                            alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" title="Cliquez pour agrandir"/> </a>      
                         </div>
                         <div class="b33">
                             <h1><strong><a href="#">Hôtel du port</a></strong></h1>
@@ -107,8 +103,8 @@
                     <div class="be4">
                         <div class="b4">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" title="Cliquez pour agrandir" /> </a>      
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                            alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" title="Cliquez pour agrandir" /> </a>      
                         </div>
                         <div class="b44">
                             <h1><strong><a href="#">Hôtel les Mouettes</a></strong></h1>
@@ -123,8 +119,8 @@
                     <div class="be5">
                         <div class="b5">
                             <a href="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                 alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" title="Cliquez pour agrandir" /></a>       
+                            <img src="Projet_2_Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                            alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" title="Cliquez pour agrandir" /></a>       
                         </div>
                         <div class="b55">
                           <h1><strong><a href="#">Hotel de la mer</a></strong></h1>
@@ -234,75 +230,75 @@
             </div> 
         </section><br/>
         <section class="sec2">
-                <div class="b_se1">
-                   <strong>Activites à Marseille</strong>
-                </div><br/>
-                <div class="b_ele">
-                    <div class="b_el1">
-                        <div class="b_el11">
-                            <a href="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                                 alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash"title="Cliquez pour agrandir" /></a>    
+            <div class="b_se1">
+                <strong>Activites à Marseille</strong>
+            </div><br/>
+            <div class="b_ele">
+                <div class="b_el1">
+                    <div class="b_el11">
+                        <a href="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                        <img src="Projet_2_Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                        alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash"title="Cliquez pour agrandir" /></a>    
+                    </div>
+                    <div class="b_el111">
+                        <h2><a href="#">Vieux port</a></h2>
+                    </div>
+                </div>
+                <div class="b_el2">
+                    <div class="b_e2">
+                        <div class="b_e22">
+                            <a href="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                            <img src="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
+                            alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" title="Cliquez pour agrandir" /></a>      
                         </div>
-                        <div class="b_el111">
-                            <h2><a href="#">Vieux port</a></h2>
+                        <div class="b_e222">
+                            <h2><strong><a href="#">Fort de Pomègues</a></strong></h2>
                         </div>
                     </div>
-                    <div class="b_el2">
-                        <div class="b_e2">
-                            <div class="b_e22">
-                                <a href="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
-                                    <img src="Projet_2_Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
-                                    alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" title="Cliquez pour agrandir" /></a>      
-                            </div>
-                            <div class="b_e222">
-                               <h2><strong><a href="#">Fort de Pomègues</a></strong></h2>
-                            </div>
+                    <div class="b_2">
+                        <div class="b_22">
+                            <a href="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                            <img src="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" 
+                            alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash"  title="Cliquez pour agrandir"/></a>
                         </div>
-                        <div class="b_2">
-                            <div class="b_22">
-                                <a href="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
-                                    <img src="Projet_2_Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" 
-                                    alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash"  title="Cliquez pour agrandir"/></a>
-                            </div>
-                            <div class="b_222">
-                                <h2><strong><a href="#">Îles du Frioul</a></strong></h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="b_el3">
-                        <div class="b_el33">
-                            <a href="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
-                                <img src="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
-                                alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" title="Cliquez pour agrandir"/></a>       
-                        </div>
-                        <div class="b_el333">
-                            <h2><strong><a href="#">Parc national des Calanques</a></strong></h2>
-                        </div>
-                    </div>
-                    <div class="b_el4">
-                        <div class="b_e4">
-                            <div class="b_e44">
-                                <a href="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
-                                    <img src="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
-                                    alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" title="Cliquez pour agrandir"/></a> 
-                            </div>
-                            <div class="b_e444">
-                                <h2><strong><a href="#">Notre-Dame-de-la-Garde</a></strong></h2>
-                            </div>
-                        </div>
-                        <div class="b_4">
-                            <div class="b_44">
-                                <a href="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
-                                    <img src="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                                    alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash"title="Cliquez pour agrandir" /></a>    
-                            </div>
-                            <div class="b_444">
-                                <h2><strong><a href="#">Parc Longchamp</a></strong></h2>
-                            </div>
+                        <div class="b_222">
+                            <h2><strong><a href="#">Îles du Frioul</a></strong></h2>
                         </div>
                     </div>
                 </div>
+                <div class="b_el3">
+                    <div class="b_el33">
+                        <a href="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                        <img src="Projet_2_Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
+                        alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" title="Cliquez pour agrandir"/></a>       
+                    </div>
+                    <div class="b_el333">
+                        <h2><strong><a href="#">Parc national des Calanques</a></strong></h2>
+                    </div>
+                </div>
+                <div class="b_el4">
+                    <div class="b_e4">
+                        <div class="b_e44">
+                            <a href="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                            <img src="Projet_2_Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
+                            alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" title="Cliquez pour agrandir"/></a> 
+                        </div>
+                        <div class="b_e444">
+                            <h2><strong><a href="#">Notre-Dame-de-la-Garde</a></strong></h2>
+                        </div>
+                    </div>
+                    <div class="b_4">
+                        <div class="b_44">
+                            <a href="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                            <img src="Projet_2_Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                            alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash"title="Cliquez pour agrandir" /></a>    
+                        </div>
+                        <div class="b_444">
+                            <h2><strong><a href="#">Parc Longchamp</a></strong></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section><br/>
         <footer>
             <div class="bf_1">
