--- a/Projet_2_Michel_Mbaka.html
+++ b/Projet_2_Michel_Mbaka.html
@@ -29,9 +29,13 @@
                 </div>
                 <div class="rf">
                     <div class="Recherche">
-                        <div class="res1"><i class="fas fa-map-marker-alt"></i></div>
+                        <div class="res1"><i class="fas fa-map-marker-alt" style="color:black; font-size:20px"></i></div>
                         <div class="res2"><strong>Marseille, France</strong></div>
-                        <div class="res3"><a href="#">Recherche</a><i class="fas fa-search"></i></div>
+                        <div class="b_r3r4">
+                            <div class="res3"><a href="#">Recherche</a></div>
+                            <div class="res4"><a href="#"><strong><i class="fas fa-search" style="color:white; font-size:20px"></i></strong></a></div>
+                        </div>
+
                     </div> 
                     <div class="fil">
                         <div class="fi1">
@@ -75,7 +79,7 @@
                             alt=" Photo marcus-loke-WQJvWU_HZFo-unsplash" title="Cliquez pour agrandir"/> </a>      
                         </div>
                         <div class="b22">
-                             <h1><strong><a href="#">Auberge la Cannablère</a></strong></h1>
+                             <h1><strong><a href="#" title="Visiter le lieu">Auberge la Cannablère</a></strong></h1>
                              <h2>nuit à partir de 25€</h2>
                              <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                              <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -91,7 +95,7 @@
                             alt=" Photo fred-kleber-gTbaxaVLvsg-unsplash" title="Cliquez pour agrandir"/> </a>      
                         </div>
                         <div class="b33">
-                            <h1><strong><a href="#">Hôtel du port</a></strong></h1>
+                            <h1><strong><a href="#"title="Visiter le lieu">Hôtel du port</a></strong></h1>
                             <h2>nuit à partir de 52€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -107,7 +111,7 @@
                             alt="  Photo reisetopia-B8WIgxA_PFU-unsplash" title="Cliquez pour agrandir" /> </a>      
                         </div>
                         <div class="b44">
-                            <h1><strong><a href="#">Hôtel les Mouettes</a></strong></h1>
+                            <h1><strong><a href="#"title="Visiter le lieu">Hôtel les Mouettes</a></strong></h1>
                             <h2>nuit à partir de 76€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -123,7 +127,7 @@
                             alt=" Photo annie-spratt-Eg1qcIitAuA-unsplash" title="Cliquez pour agrandir" /></a>       
                         </div>
                         <div class="b55">
-                          <h1><strong><a href="#">Hotel de la mer</a></strong></h1>
+                          <h1><strong><a href="#"title="Visiter le lieu">Hotel de la mer</a></strong></h1>
                           <h2>nuit à partir de 46€</h2>
                           <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                           <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -139,7 +143,7 @@
                                  alt=" Photo nicate-lee-kT-ZyaiwBe0-unsplash" title="Cliquez pour agrandir"/></a>
                         </div>
                         <div class="b66">
-                            <h1><strong><a href="#">Auberge le Panier</a></strong></h1>
+                            <h1><strong><a href="#"title="Visiter le lieu">Auberge le Panier</a></strong></h1>
                             <h2>nuit à partir de 23€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -155,7 +159,7 @@
                                  alt="  Photo febrian-zakaria-M6S1WvfW68A-unsplash" title="Cliquez pour agrandir"/></a>      
                         </div>
                         <div class="b77">
-                            <h1><strong><a href="#">Hôtel chez Amina</a></strong></h1>
+                            <h1><strong><a href="#"title="Visiter le lieu">Hôtel chez Amina</a></strong></h1>
                             <h2>nuit à partir de 96€</h2>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                             <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -186,8 +190,8 @@
                              alt=" Photo Hebergement" title="Cliquez pour agrandir"/></a>       
                     </div>
                     <div class="p22">
-                        <h1><strong><a href="#">Hotel Le soleil du matin</a></strong></h1>
-                        <h2>nuit à partir de 128€</h2>
+                        <h1><strong><a href="#"title="Visiter le lieu">Hotel Le soleil du matin</a></strong></h1>
+                        <h2>nuit à partir de 128€</h2><br/>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -202,8 +206,8 @@
                              alt=" Photo aw-creative-VGs8z60yT2c-unsplash " title="Cliquez pour agrandir"/></a>
                     </div>
                     <div class="p33">
-                        <h1><strong><a href="#">Au coeur de l'eau Chambre d'hôtes</a></strong></h1> 
-                        <h2>nuit à partir de 71€</h2>
+                        <h1><strong><a href="#"title="Visiter le lieu">Au coeur de l'eau Chambre d'hôtes</a></strong></h1> 
+                        <h2>nuit à partir de 71€</h2><br/>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -218,8 +222,8 @@
                              alt="  Photo febrian-zakaria-sjvU0THccQA-unsplash" title="Cliquez pour agrandir" /></a>       
                     </div>
                     <div class="p44">
-                        <h1><strong><a href="#">Hôtel tout bleu et blanc</a></strong></h1>
-                        <h2>nuit à partir de 78€</h2>
+                        <h1><strong><a href="#"title="Visiter le lieu">Hôtel tout bleu et blanc</a></strong></h1>
+                        <h2>nuit à partir de 78€</h2><br/>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
                         <i class="fas fa-star" style="color:blue; font-size:10px"></i>
@@ -241,7 +245,7 @@
                         alt="  Photo reno-laithienne-QUgJhdY5Fyk-unsplash"title="Cliquez pour agrandir" /></a>    
                     </div>
                     <div class="b_el111">
-                        <h2><a href="#">Vieux port</a></h2>
+                        <h2><a href="#"title="Visiter le lieu">Vieux port</a></h2>
                     </div>
                 </div>
                 <div class="b_el2">
@@ -252,7 +256,7 @@
                             alt="  Photo paul-hermann-QFTrLdQIRhI-unsplash" title="Cliquez pour agrandir" /></a>      
                         </div>
                         <div class="b_e222">
-                            <h2><strong><a href="#">Fort de Pomègues</a></strong></h2>
+                            <h2><strong><a href="#"title="Visiter le lieu">Fort de Pomègues</a></strong></h2>
                         </div>
                     </div>
                     <div class="b_2">
@@ -262,7 +266,7 @@
                             alt="  Photo kevin-hikari-rV_Qd1l-VXg-unsplash"  title="Cliquez pour agrandir"/></a>
                         </div>
                         <div class="b_222">
-                            <h2><strong><a href="#">Îles du Frioul</a></strong></h2>
+                            <h2><strong><a href="#"title="Visiter le lieu">Îles du Frioul</a></strong></h2>
                         </div>
                     </div>
                 </div>
@@ -273,7 +277,7 @@
                         alt="  Photo kilyan-sockalingum-NR8-cBCN3aI-unsplash" title="Cliquez pour agrandir"/></a>       
                     </div>
                     <div class="b_el333">
-                        <h2><strong><a href="#">Parc national des Calanques</a></strong></h2>
+                        <h2><strong><a href="#"title="Visiter le lieu">Parc national des Calanques</a></strong></h2>
                     </div>
                 </div>
                 <div class="b_el4">
@@ -284,7 +288,7 @@
                             alt="  Photo florian-wehde-xW9e8gdotxI-unsplash" title="Cliquez pour agrandir"/></a> 
                         </div>
                         <div class="b_e444">
-                            <h2><strong><a href="#">Notre-Dame-de-la-Garde</a></strong></h2>
+                            <h2><strong><a href="#"title="Visiter le lieu">Notre-Dame-de-la-Garde</a></strong></h2>
                         </div>
                     </div>
                     <div class="b_4">
@@ -294,7 +298,7 @@
                             alt="  Photo lena-paulin-wH2-EJoDcV0-unsplash"title="Cliquez pour agrandir" /></a>    
                         </div>
                         <div class="b_444">
-                            <h2><strong><a href="#">Parc Longchamp</a></strong></h2>
+                            <h2><strong><a href="#"title="Visiter le lieu">Parc Longchamp</a></strong></h2>
                         </div>
                     </div>
                 </div>
@@ -303,9 +307,9 @@
         <footer>
             <div class="bf_1">
                 <strong>A propos</strong><br/>
-                <a href="#">Fonctonnement du site</a>
-                <a href="#">Condition generale de vente</a>
-                <a href="#">Données et confidentialité</a>
+                <a href="#"title="Cliqluez ici pour les détailles de fonctinnement">Fonctonnement du site</a>
+                <a href="#"title="Voir les conditions générales">Condition generale de vente</a>
+                <a href="#"title="A propos de données et ">Données et confidentialité</a>
             </div>
             <div class="bf_2">
                 <strong>Nos hébergements</strong><br/>
