--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width initial-scale=1.0" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link rel="stylesheet" href="Projet_2_Michel_Mbaka.css" />
+        <link rel="stylesheet" href="Style.css">
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <title>Projet n°2 Michel Mbaka</title>
     </head>
